fix email active endpoint
